--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,4 +1,4 @@
-user                            www;
+user                            root;
 worker_processes                auto; # it will be determinate automatically by the number of core
 
 error_log                       /var/log/nginx/error.log warn;
@@ -16,13 +16,20 @@ http {
     keepalive_timeout           3000;
     server {
         listen                  443 ssl;
-        root                    /www;
+        root                    /www/wordpress;
         index                   index.html index.php index.htm;
         ssl_certificate         /etc/ssl/certs/nginx-selfsigned.crt;
         ssl_certificate_key     /etc/ssl/private/nginx-selfsigned.key;
         ssl_protocols           TLSv1.2 TLSv1.3;
-        location = /50x.html {
-                root /var/lib/nginx/html;
+        location / {
+            try_files $uri $uri/ /index.php?$args;
+        }
+        location ~ \.php$ {
+                try_files $uri /index.php =404;
+                fastcgi_pass   wordpress:9000;
+                fastcgi_index  index.php;
+                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                include fastcgi_params;
         }
     }
     server {
