--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -32,13 +32,13 @@ http {
                 include fastcgi_params;
         }
     }
-    server {
-        listen                  80;
-        root                    /www;
-        index                   index.html index.htm;
-        server_name             localhost;
-        client_max_body_size    32m;
-        error_page              500 502 503 504  /50x.html;
-        return                  301 https://$host$request_uri;
-    }
+    #server {
+    #    listen                  80;
+    #    root                    /www;
+    #    index                   index.html index.htm;
+    #    server_name             localhost;
+    #    client_max_body_size    32m;
+    #    error_page              500 502 503 504  /50x.html;
+    #    return                  301 https://$host$request_uri;
+    #}
 }
